--- a/css/style.css
+++ b/css/style.css
@@ -16,4 +16,39 @@ body{
 .banner-text h1{
     font-family: 'Bebas Neue', cursive;
     padding-top: 50px;
+    color: #FABE4C;
+}
+.buy-button{
+    background: linear-gradient(180deg, #A4BC46 0%, #85A019 100%);
+    color: white;
+}
+.product-section{
+    padding: 50px 0;
+}
+.card-sec-h2{
+    font-family: 'Bebas Neue', cursive;
+    font-size: 48px;
+
+}
+.product-row{
+    padding: 50px 0;
+}
+.product-card{
+    border-radius: 20px;
+}
+.card-img{
+    background: #F1F1F1;
+    border-radius: 20px;
+}
+.card-title-h5{
+    font-size: 24px;
+    font-weight: bold;
+}
+.price-text{
+    font-weight: 900;
+    color: #FABE4C;
+    font-size: 36px;
+}
+.horzontal-card{
+    border-radius: 20px;
 }
